[gd_scene load_steps=10 format=3 uid="uid://bxoakt32optig"]

[ext_resource type="Script" path="res://resources/prefabs/player_temp/player.gd" id="1_4ny21"]
[ext_resource type="Texture2D" uid="uid://cmyunnuoxtigv" path="res://icon.png" id="1_wu0ao"]
[ext_resource type="Resource" uid="uid://r7tnra80pigx" path="res://resources/prefabs/player/inventory.tres" id="2_rsx5n"]
[ext_resource type="Script" path="res://resources/inventory/scripts/inventory2d/inventory_container.gd" id="4_453se"]
[ext_resource type="Script" path="res://resources/inventory/scripts/inventory2d/inventory_interactor.gd" id="4_g76hd"]
[ext_resource type="Script" path="res://resources/inventory/scripts/item2d/item_interactor.gd" id="6_32swi"]

[sub_resource type="CircleShape2D" id="CircleShape2D_ki5l7"]
radius = 5.47566

[sub_resource type="CircleShape2D" id="CircleShape2D_o05ud"]
radius = 65.123

[sub_resource type="CircleShape2D" id="CircleShape2D_p7jic"]

[node name="CharacterBody2D" type="CharacterBody2D"]
script = ExtResource("1_4ny21")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(1, -27)
texture = ExtResource("1_wu0ao")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
scale = Vector2(6.39193, 3.86453)
shape = SubResource("CircleShape2D_ki5l7")

[node name="ItemPosition" type="Marker2D" parent="."]
position = Vector2(58, -26)

[node name="InventoryInteractorArea" type="Area2D" parent="."]
script = ExtResource("4_g76hd")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InventoryInteractorArea"]
shape = SubResource("CircleShape2D_o05ud")
debug_color = Color(0.733333, 0.6, 0.701961, 0.0941176)

[node name="InventoryContainerObject" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
monitoring = false
monitorable = false
script = ExtResource("4_453se")
inventory = ExtResource("2_rsx5n")

[node name="CollisionShape2D" type="CollisionShape2D" parent="InventoryContainerObject"]
shape = SubResource("CircleShape2D_p7jic")

[node name="ItemInteractorArea" type="Area2D" parent="."]
script = ExtResource("6_32swi")

[node name="CollisionShape2D" type="CollisionShape2D" parent="ItemInteractorArea"]
shape = SubResource("CircleShape2D_o05ud")
debug_color = Color(0.733333, 0.6, 0.701961, 0.0941176)

[connection signal="inventory_container_area_entered" from="InventoryInteractorArea" to="." method="_on_inventory_container_area_entered"]
[connection signal="inventory_container_area_exited" from="InventoryInteractorArea" to="." method="_on_inventory_container_area_exited"]
[connection signal="item_container_area_entered" from="ItemInteractorArea" to="." method="_on_item_entered"]
